--- a/Photo Gallery/styles.css
+++ b/Photo Gallery/styles.css
@@ -4,8 +4,8 @@
   
   body {
     margin: 0;
-    font-family: sans-serif;
-    background: #f5f6f7;
+    font-family: JetBrains Mono;
+    background: #ffffff;
   }
   
   .header {
